New Gaia DR3 Python Program Versions
New Gaia DR3 Python Program Versions

--- a/Gaia DR3 Merge Download CSV Files01_Old.ipynb
+++ b/Gaia DR3 Merge Download CSV Files01_Old.ipynb
@@ -37,30 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import astropy\n",
-    "\n",
-    "print(\"pandas \" + str(pd.__version__))\n",
-    "print(\"astropy \" + str(astropy.__version__))\n",
-    "\n",
-    "print(\"\\n\")\n",
-    "!python --version\n",
-    "\n",
-    "print(\"\\n\")\n",
-    "!jupyter --version"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "AstrophysicalParameters_table = ascii.read('/Users/josephkarpinski/Downloads/AstrophysicalParameters_501156-502152.csv', delimiter=\",\")"
+    "AstrophysicalParameters_table = ascii.read('AstrophysicalParameters_090621-093880.csv', delimiter=\",\")"
    ]
   },
   {
@@ -139,7 +121,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "GaiaSource_table = ascii.read('/Users/josephkarpinski/Downloads/GaiaSource_501156-502152.csv', delimiter=\",\")"
+    "GaiaSource_table = ascii.read('GaiaSource_090621-093880.csv', delimiter=\",\")"
    ]
   },
   {
@@ -157,17 +139,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df2.columns.sort_values().tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2 = df2[['source_id', \n",
-    "'ra',\n",
+    "df2 = df2[['source_id',\n",
+    " 'ra',\n",
     " 'dec',\n",
     " 'parallax',\n",
     " 'pm',\n",
@@ -185,52 +158,26 @@
     " 'b',\n",
     " 'ecl_lon',\n",
     " 'ecl_lat',\n",
-    " 'has_epoch_rv',\n",
     " 'teff_gspphot',\n",
     " 'logg_gspphot',\n",
     " 'mh_gspphot',\n",
     " 'distance_gspphot',\n",
     " 'ag_gspphot',\n",
-    " 'ebpminrp_gspphot',\n",
-    " 'has_epoch_photometry',\n",
-    " 'has_epoch_rv',\n",
-    " 'has_mcmc_gspphot',\n",
-    " 'has_mcmc_msc',\n",
-    " 'has_rvs',\n",
-    " 'has_xp_continuous',\n",
-    " 'has_xp_sampled']]"
+    " 'ebpminrp_gspphot']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df2.to_csv(\"/Users/josephkarpinski/Downloads/r1_090621-093880_flags.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df2.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "95170"
+       "125686"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,16 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "95170"
+       "125686"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,21 +228,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r1 = r1[['source_id',\n",
-    " 'has_epoch_photometry',\n",
-    " 'has_epoch_rv',\n",
-    " 'has_mcmc_gspphot',\n",
-    " 'has_mcmc_msc',\n",
-    " 'has_rvs',\n",
-    " 'has_xp_continuous',\n",
-    " 'has_xp_sampled',\n",
-    " 'ra',\n",
-    " 'dec',\n",
-    " 'abp_gspphot',\n",
+    "r1 = r1[['abp_gspphot',\n",
     " 'ag_esphs',\n",
     " 'ag_gspphot',\n",
     " 'age_flame',\n",
@@ -308,6 +245,7 @@
     " 'cefe_gspspec',\n",
     " 'classlabel_espels',\n",
     " 'crfe_gspspec',\n",
+    " 'dec',\n",
     " 'distance_gspphot',\n",
     " 'ebpminrp_esphs',\n",
     " 'ebpminrp_gspphot',\n",
@@ -339,11 +277,13 @@
     " 'pmdec',\n",
     " 'pmra',\n",
     " 'pseudocolour',\n",
+    " 'ra',\n",
     " 'radial_velocity',\n",
     " 'radius_flame',\n",
     " 'radius_gspphot',\n",
     " 'sfe_gspspec',\n",
     " 'sife_gspspec',\n",
+    " 'source_id',\n",
     " 'spectraltype_esphs',\n",
     " 'teff_esphs',\n",
     " 'teff_espucd',\n",
@@ -356,12 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "r1.to_csv(\"Data/r2_501156-502152.csv\")"
+    "r1.to_csv(\"r1_090621-093880.csv\")"
    ]
   },
   {
